# fl-intrusion-detection

./: .gitignore  README.md  client.py  client_app.py  main.py  pyproject.toml  server.py  server_app.py
apps/: client_app.py  server_app.py  task.py
cl/: model.py
config/: config.ini  config_loader.py
data/: data_loader.py  preprocessing.py
data_loading/: data_loader.py  data_splitter.py  preprocessing.py
model/: model.py
preprocessing/: preprocessing.py
scripts/: dp_acc.py  preprocessing.py  run_sweep.py  sweep.yaml  visualize.py
strategy/: strategy.py
utils/: utils.py  visualization.py
visualization/: plot.py  utils.py  visualization.py  visualize.py
