[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl"
version = "1.0.0"
description = "Federated AI with Embedded Devices using Flower"
license = "Apache-2.0"
dependencies = [

]

[tool.hatch.build]
exclude = [
    "datasets/*", # Exclude datasets from FAB (if generated in this directory)
    "_static/*", # Exclude images in README from FAB
    "results/*",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "miun-jvig"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
min-available-clients = 2
num-server-rounds = 1
fraction-evaluate = 0.5
local-epochs = 2
batch-size = 16
fraction-fit = 1.0

[tool.flwr.federations]
default = "fl-iot"

[tool.flwr.federations.fl-iot]
address = "127.0.0.1:9093"
insecure = true